#109 Fixed issue with dropdown menu not appearning on mobile

--- a/src/components/homepage/home-page.css
+++ b/src/components/homepage/home-page.css
@@ -59,11 +59,7 @@
   width: 600px;
   height: 50px;
   font-size: 20px;
-  border-radius: 20px;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  -ms-appearance: none;
-}
+  border-radius: 20px;}
 
 .select {
   margin: 1rem;
