--- a/src/components/settingspage/settings-page.css
+++ b/src/components/settingspage/settings-page.css
@@ -82,9 +82,6 @@
     height: 50px;
     font-size: 20px;
     border-radius: 20px;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    -ms-appearance: none;
   }
 
   .settings-form1{
